reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__projection.rs_line_1180_col_5_001.log

*** crates/tracewake-core/src/epistemics/projection.rs:1180:5: replace newest_workplace_records -> BTreeMap<WorkplaceId, &'a ActorKnownProjectionRecord> with BTreeMap::from_iter([(Default::default(), Box::leak(Box::new(Default::default())))])

*** mutation diff:
--- crates/tracewake-core/src/epistemics/projection.rs
+++ replace newest_workplace_records -> BTreeMap<WorkplaceId, &'a ActorKnownProjectionRecord> with BTreeMap::from_iter([(Default::default(), Box::leak(Box::new(Default::default())))])
@@ -1172,29 +1172,17 @@
     policies
         .remove(kind)
         .unwrap_or_else(|| panic!("unknown actor-known projection kind: {kind}"))
 }
 
 fn newest_workplace_records<'a>(
     records: Option<&'a BTreeSet<ActorKnownProjectionRecord>>,
 ) -> BTreeMap<WorkplaceId, &'a ActorKnownProjectionRecord> {
-    let mut newest: BTreeMap<WorkplaceId, &'a ActorKnownProjectionRecord> = BTreeMap::new();
-    for record in records.into_iter().flat_map(|records| records.iter()) {
-        let ActorKnownProjectionRecord::Workplace { workplace_id, .. } = record else {
-            continue;
-        };
-        if newest
-            .get(workplace_id)
-            .is_none_or(|previous| workplace_record_is_newer(record, previous))
-        {
-            newest.insert(workplace_id.clone(), record);
-        }
-    }
-    newest
+    BTreeMap::from_iter([(Default::default(), Box::leak(Box::new(Default::default())))]) /* ~ changed by cargo-mutants ~ */
 }
 
 fn workplace_record_is_newer(
     candidate: &ActorKnownProjectionRecord,
     previous: &ActorKnownProjectionRecord,
 ) -> bool {
     candidate.source_tick() > previous.source_tick()
         || (candidate.source_tick() == previous.source_tick()


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/projection.rs` has changed (1781909504.075924004s, 6s after last build at 1781909498.495924058s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0308]: mismatched types
    --> crates/tracewake-core/src/epistemics/projection.rs:1180:5
     |
1179 | ) -> BTreeMap<WorkplaceId, &'a ActorKnownProjectionRecord> {
     |      ----------------------------------------------------- expected `BTreeMap<WorkplaceId, &'a ActorKnownProjectionRecord>` because of return type
1180 |     BTreeMap::from_iter([(Default::default(), Box::leak(Box::new(Default::default())))]) /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ in mutability
     |
     = note: expected struct `BTreeMap<WorkplaceId, &'a ActorKnownProjectionRecord>`
                found struct `BTreeMap<_, &mut _>`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0308]: mismatched types
    --> crates/tracewake-core/src/epistemics/projection.rs:1180:5
     |
1179 | ) -> BTreeMap<WorkplaceId, &'a ActorKnownProjectionRecord> {
     |      ----------------------------------------------------- expected `std::collections::BTreeMap<ids::WorkplaceId, &'a projection::ActorKnownProjectionRecord>` because of return type
1180 |     BTreeMap::from_iter([(Default::default(), Box::leak(Box::new(Default::default())))]) /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ in mutability
     |
     = note: expected struct `std::collections::BTreeMap<ids::WorkplaceId, &'a projection::ActorKnownProjectionRecord>`
                found struct `std::collections::BTreeMap<_, &mut _>`

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
